# did_imputation

./: .gitignore  404.html  AGENT.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  DOCS_DEPLOY_STATUS.html  EXEC_SUMMARY.md  LICENSE  NOTICE  PARITY.html  README.md  RELEASE_STATUS.html  ROADMAP.md  SECURITY.md  SPEC.html  TEST_STRATEGY.md  coverage.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.local.json
PARITY/: index.html
RELEASE_STATUS/: index.html
SPEC/: index.html
docs/: DOCS_DEPLOY_STATUS.md  EXTERNAL_REVIEW_UPDATE.md  INTELLIGENCE_REPORT.md  INTELLIGENCE_SUMMARY.md  PARITY.md  RELEASE_STATUS.md  SPEC.md  index.md
examples/: simulate_and_run.py
parity/: run_all.ps1  run_parity.ps1
parity/python/: compare.py  make_csvs.py  run_py.py
parity/stata/: debug.do  peek.do  peek_pre.do  run_did.do  run_did_debug.do  test_names.do
search/: search_index.json
src/didimpute/: __init__.py  aggregate.py  api.py  cli.py  counterfactual.py  errors.py  first_stage.py  se.py  utils.py  validation.py
tests/: dgp.py  test_aggregate.py  test_api_errors.py  test_cli.py  test_counterfactual.py  test_integration_aggregate.py  test_parity.py  test_regression_golden.py  test_se_pretrend.py  test_smoke.py  test_utils.py  test_validation.py
tests/golden/: dgpA_no_treat_py_nobs_-3_3.csv  dgpB_const_te_py_equal_0_3.csv  dgpB_const_te_py_nobs_0_3.csv
upstream/git/: README.md  event_plot.sthlp
